--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check": "prettier --check ."
   },
   "dependencies": {
+    "lucide-react": "^0.575.0",
     "next": "16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
